arreglo impresion presupuesto

--- a/WebContent/printEstimation.html
+++ b/WebContent/printEstimation.html
@@ -31,12 +31,30 @@
 		label, span {
 			font-weight: bold;
 		}
+		
+		.header {
+			widht: 100%;
+		}
+		
+		.header div {
+			display: inline;
+		}
+		
+		.date div {
+			text-align: right;
+			width: 50%;
+		}
+		
+		hr { 
+		  background-color: black; 
+		  height: 1px;
+		}
 		</style>
 	<script > 
 	<!-- 
 	
 	function inhabilitar(){ 
-	   	return false;
+	   	return true;
 	} 
 	
 	document.oncontextmenu=inhabilitar;
@@ -45,57 +63,226 @@
 	</script>
 </head>
 	<body id="especial">
-		<div id="printHeader">
-        	<img alt="logo" src="./images/logo.png"/>
-        </div>  
-		
+		<div id="printHeader" class="header">
+			<div style="width:50%;float:left;">HOSPITALIZACIÓN VIDAMED</div>
+			<div style="width:50%;float:left;text-align:right;">Fecha: 17/07/2013</div>       	
+        </div><br>
+		<div style="text-align:right;width:100%;">Hora: 11:28:31 a.m.</div> 
 		<br>
-		<div id="title" style="font-size:16px; font-weight: bold; text-align:right;"> Fecha: 17/06/2013 </div>
-		<div id="title" style="font-size:16px; font-weight: bold;"> Presupuesto n° 1001 </div>
+		<div id="title" style="font-size:16px; font-weight: bold;text-align:center;"> PRESUPUESTO # 201345032 </div>
+		<hr />
+		<div class="header">
+			<div style="width:50%;float:left;">Nombre del Paciente: Gipsy Altuve</div>
+			<div style="width:50%;float:left;text-align:right;">Cédula de Identidad: 13.463.499</div>       	
+        </div><br>
+		<div class="header">
+			<div style="width:50%;float:left;">Asegurado Principal:</div>
+			<div style="width:50%;float:left;text-align:right;">Cédula de Asegurado:</div>       	
+        </div><br>
+		<div class="header">
+			Médico Tratante: Minaret Sandrea     	
+        </div>
+		<div class="header">
+			Responsable de Pago: Seguros Federal C.A.     	
+        </div><br>
+        <table id="sweetTable">
+			<tbody>
+				<tr>
+					<th style="width:10%">Número</th>
+					<th style="width:45%">Diagnóstico</th>
+					<th style="width:45%">Protocolo</th>
+				</tr>				
+				<tr>
+					<td>001</td>
+					<td>Rinopatía Obstructiva</td>
+					<td>Cirugía Funcional Endonasal</td>
+				</tr>					
+				<tr>
+					<td>002</td>
+					<td>Amigdalitis Crónica</td>
+					<td>Amigdalectomía o Tonsilectomía</td>
+				</tr>
+			</tbody>
+		</table>
 		<br>
-		
-		<h3>Datos Paciente</h3>
-		<fieldset>
-			<label for="name" class="etiq"><span id="idCard">Cédula de Identidad: </span></label>V-12345678<br><br>
-			<label for="name" class="etiq"><span id="idCard">Nombre: </span></label>Ana Rojas<br><br>					
-			<label for="name" class="etiq"><span id="idCard">Médico Tratante: </span></label>Ricardo García<br><br>
-			<label for="name" class="etiq"><span id="idCard">Unidad: </span></label>Cirugía<br><br>
-			<label for="name" class="etiq"><span id="idCard">Responsable del Pago: </span></label>Seguros La Previsora<br><br> 
-		</fieldset>
-		<br>
-		<h3>Protocolos</h3>
-		<fieldset>
-			<label for="name" class="etiq"><span id="idCard"></span></label>* Histerectomía<br><br>
-			<label for="name" class="etiq"><span id="idCard"></span></label>* Colecistectomía<br><br>
-			<label for="name" class="etiq"><span id="idCard"></span></label>* Apendicectomía<br>
-		</fieldset>
-		<br>
-		<h3>Servicios</h3>
 		<table id="sweetTable">
 			<tbody>
 				<tr>
-					<th>Servicio</th>
-					<th>Precio</th>
+					<th colspan="2">Hospitalización</th>
+					<th style="width:20%;text-align:right;">Precio Bs.F.</th>
 				</tr>				
 				<tr>
-					<td>Hospitalización</td>
-					<td>Bs 3472,00</td>
+					<td style="width:50%">Habitación</td>
+					<td style="width:30%">Ambulatorio</td>
+					<td style="width:20%;text-align:right;">1.135,20</td>
 				</tr>				
 				<tr>
-					<td>Anestesia Peridural</td>
-					<td>Bs 2727,50</td>
+					<td style="width:50%">Médico Residente</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">220,00</td>
 				</tr>				
 				<tr>
-					<td>Servicios Médicos</td>
-					<td>Bs 1021,90</td>
+					<td style="width:50%">Servicios de Asistencia Permanente</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">154,69</td>
 				</tr>				
+				<tr>
+					<td style="width:50%">Servicios de Alimentación</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">260,00</td>
+				</tr>								
+				<tr>
+					<td style="width:50%">Servicios Farmacéuticos Ambulatorios</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">35,20</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Fármacos en Habitación</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">650,32</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Material Médico Quirúrgico en Habitación</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">587,34</td>
+				</tr>
 				<tr id="totalTr">
-					<td>*** MONTO TOTAL ***</td>
-					<td>Bs 7221,40</td>
+					<td colspan="2">*** SUB-TOTAL ***</td>
+					<td style="width:20%;text-align:right;">3.042,75</td>
+				</tr>
+				<tr>
+					<th colspan="2">Gastos en Quirófano</th>
+					<th style="width:20%;text-align:right;">Precio Bs.F.</th>
+				</tr>				
+				<tr>
+					<td style="width:50%">Quirófano</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">4.875,00</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Sala de Recuperación</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">450,00</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Monitoreo</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">1.950,00</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Gases, Anestésicos y Medicamentos</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">4.593,91</td>
+				</tr>								
+				<tr>
+					<td style="width:50%">Material Médico Quirúrgico</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">5852,03</td>
+				</tr>
+				<tr id="totalTr">
+					<td colspan="2">*** SUB-TOTAL ***</td>
+					<td style="width:20%;text-align:right;">17.720,34</td>
+				</tr>
+				<tr>
+					<th colspan="2">Servicios Médicos</th>
+					<th style="width:20%;text-align:right;">Precio Bs.F.</th>
+				</tr>				
+				<tr>
+					<td style="width:50%">Banco de Sangre (Tipiaje)</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">591,25</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Electrocardiograma Reposo</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">402,50</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Evaluación Cardiovascular Pre-Operatoria</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">812,50</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Laboratorio Clínico</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">552,00</td>
+				</tr>								
+				<tr>
+					<td style="width:50%">Rayos X</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">601,90</td>
+				</tr>
+				<tr id="totalTr">
+					<td colspan="2">*** SUB-TOTAL ***</td>
+					<td style="width:20%;text-align:right;">2.960,15</td>
+				</tr>
+				<tr>
+					<th colspan="2">Honorarios Profesionales</th>
+					<th style="width:20%;text-align:right;">Precio Bs.F.</th>
+				</tr>				
+				<tr>
+					<td style="width:50%">Cirujano Principal</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">3.300,00</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Cirujano Ayudante I</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">1.320,00</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Anestesiólogo</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">1.320,00</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Instrumentista</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">224,20</td>
+				</tr>								
+				<tr>
+					<td style="width:50%">Enfermera Circulante</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">56,63</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Instrumental Especial</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">2.000,00</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Equipo Endoscopio</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">2.500,00</td>
+				</tr>								
+				<tr>
+					<td style="width:50%">Material Especial</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">2.500,00</td>
+				</tr>								
+				<tr>
+					<td style="width:50%">Consulta Pre-Anestésica</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">308,00</td>
+				</tr>
+				<tr id="totalTr">
+					<td colspan="2">*** SUB-TOTAL ***</td>
+					<td style="width:20%;text-align:right;">13.528,83</td>
+				</tr>
+				<tr id="totalTr">
+					<td colspan="2">*** SUB-TOTAL ***</td>
+					<td style="width:20%;text-align:right;">37.252,07</td>
+				</tr>
+				<tr id="totalTr">
+					<td colspan="2">I.V.A.</td>
+					<td style="width:20%;text-align:right;">0,00</td>
+				</tr>
+				<tr id="totalTr">
+					<td colspan="2">*** TOTAL GENERAL ***</td>
+					<td style="width:20%;text-align:right;">37.252,07</td>
 				</tr>
 			</tbody>
-			</table>	
-		
+			</table>
 		<br>
 		<div id="botonera">
 				<form onsubmit="printPageContentB();">
