--- a/WebContent/printEstimation.html
+++ b/WebContent/printEstimation.html
@@ -21,8 +21,12 @@
 		<style type="text/css">
 		#especial{
 			background-image:url(null);
-			margin-left: 10%;
-			margin-right: 10%;
+			margin-left: 8%;
+			margin-right: 8%;
+			text-align: left;
+			font-family: Arial, Helvetica, sans-serif;
+			color: #061C37;
+			background: #fff;
 		}
 		input{
 			border: none;
@@ -33,7 +37,8 @@
 		}
 		
 		.header {
-			widht: 100%;
+			width: 100%;
+			font-size: 11px;
 		}
 		
 		.header div {
@@ -49,6 +54,36 @@
 		  background-color: black; 
 		  height: 1px;
 		}
+		
+		#sweetTable {
+			width: 100%;
+			border-collapse: collapse;
+		}
+		
+		#sweetTable th {
+			text-align: left;
+			padding-top: 5px;
+			padding-bottom: 4px;
+			background-color: #006c92;
+			color: #fff;
+		}
+		
+		#totalTr td {
+			background-color: #1EB1DD;	
+			font-weight: bold;
+		}
+		
+		#sweetTable td, #sweetTable th {
+			border: 1px solid #006c92;
+			padding: 3px 7px 2px 7px;
+			font-size: 11px;
+		}
+		*
+		{
+		  margin: 0 auto 0 auto;
+		 text-align:left;
+		 
+		 }
 		</style>
 	<script > 
 	<!-- 
@@ -67,9 +102,8 @@
 			<div style="width:50%;float:left;">HOSPITALIZACIÓN VIDAMED</div>
 			<div style="width:50%;float:left;text-align:right;">Fecha: 17/07/2013</div>       	
         </div><br>
-		<div style="text-align:right;width:100%;">Hora: 11:28:31 a.m.</div> 
-		<br>
-		<div id="title" style="font-size:16px; font-weight: bold;text-align:center;"> PRESUPUESTO # 201345032 </div>
+		<div style="text-align:right;width:100%;font-size:11px;">Hora: 11:28:31 a.m.</div> 
+		<div id="title" style="font-size:14px; font-weight: bold;text-align:center;"> PRESUPUESTO # 201345032 </div>
 		<hr />
 		<div class="header">
 			<div style="width:50%;float:left;">Nombre del Paciente: Gipsy Altuve</div>
@@ -270,7 +304,7 @@
 					<td style="width:20%;text-align:right;">13.528,83</td>
 				</tr>
 				<tr id="totalTr">
-					<td colspan="2">*** SUB-TOTAL ***</td>
+					<td colspan="2">*** TOTAL ***</td>
 					<td style="width:20%;text-align:right;">37.252,07</td>
 				</tr>
 				<tr id="totalTr">
