--- a/WebContent/estimations.html
+++ b/WebContent/estimations.html
@@ -113,9 +113,10 @@
 											<a href="showEstimation.html?function=estimations" style="color: transparent" >
 												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 											</a>
-											<a href="printEstimation.html" style="color: transparent" >
-												<img alt="logo" src="./images/print.png"  height="16" width="16" title="Imprimir" />
-											</a>
+											<a id="go" rel="leanModal" href="#printUser" style="color: #f7941e; font-weight: bold;" 
+												onclick="return loadVars(1001,'1001');" >
+												<img alt="logo" src="./images/print.png"  height="16" width="16" title="Imprimir"/>
+											</a> 
 											<a href="editEstimation.html" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 											</a>
@@ -192,6 +193,34 @@
 				<div class="spacer"></div>
         	</div>
        	</div>
+		<div id="printUser">
+			<div id="signup-ct">
+				<h3 id="see_id" class="sprited" > Imprimir Presupuesto</h3>
+				<br><br>
+				<span>Seleccione en qué formato desea imprimir el presupuesto n° <span class="cliente"></span>: </span> <br><br>
+				<div id="signup-header">
+					<a class="close_x" id="close_x"  href="#"></a>
+				</div>
+				<form action="printEstimation3.html" method="post"  onsubmit="return setV(this)">
+					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
+					<div class="btn-fld">
+						<input type="submit"  class="buttonPopUpDelete2"  name="sbmtButton" value="Compacto"  />
+					</div>
+		 		</form>
+				<form action="printEstimation.html" method="post"  onsubmit="return setV(this)">
+					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
+					<div class="btn-fld">
+						<input type="submit"  class="buttonPopUpDelete3"  name="sbmtButton" value="Detallado"  />
+					</div>
+		 		</form>
+				<form action="printEstimation2.html" method="post"  onsubmit="return setV(this)">
+					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
+					<div class="btn-fld">
+						<input type="submit"  class="buttonPopUpDelete4"  name="sbmtButton" value="Detallado 2"  />
+					</div>
+		 		</form>
+			</div>
+		</div>
 		<div id="deleteUser">
 			<div id="signup-ct">
 				<h3 id="see_id" class="sprited" > Eliminar Presupuesto</h3>
