--- a/WebContent/printEstimation2.html
+++ b/WebContent/printEstimation2.html
@@ -64,7 +64,7 @@
 		  height: 1px;
 		}
 		
-		#sweetTable {
+		#sweetTable, #invisibleTable {
 			width: 100%;
 			border-collapse: collapse;
 		}
@@ -78,6 +78,15 @@
 			font-weight: bold;
 		}
 		
+		#invisibleTable th {
+			text-align: left;
+			padding-top: 5px;
+			padding-bottom: 4px;
+			background-color: white;
+			color: black;
+			font-weight: bold;
+		}
+		
 		#totalTr td {
 			background-color: #1EB1DD;	
 			font-weight: bold;
@@ -85,6 +94,13 @@
 		
 		#sweetTable td, #sweetTable th {
 			border: 1px solid #006c92;
+			padding: 1px 7px 1px 7px;
+			font-size: 10px;
+			vertical-align: top;
+		}
+		
+		#invisibleTable td, #invisibleTable th {
+			border: none;
 			padding: 1px 7px 1px 7px;
 			font-size: 10px;
 		}
@@ -145,24 +161,15 @@
         <table id="sweetTable">
 			<tbody>
 				<tr>
-					<th style="width:10%">Número</th>
-					<th style="width:45%">Diagnóstico</th>
-					<th style="width:45%">Protocolo</th>
+					<th style="width:8%">Número</th>
+					<th style="width:15%">Diagnóstico</th>
+					<th style="width:77%">Protocolo</th>
 				</tr>				
 				<tr>
 					<td>001</td>
 					<td>Rinopatía Obstructiva</td>
-					<td>Cirugía Funcional Endonasal</td>
-				</tr>					
-				<tr>
-					<td>002</td>
-					<td>Amigdalitis Crónica</td>
-					<td>Amigdalectomía o Tonsilectomía</td>
-				</tr>
-			</tbody>
-		</table>
-		<br>
-		<table id="sweetTable">
+					<td>Cirugía Funcional Endonasal<br>
+					<table id="invisibleTable">
 			<tbody>
 				<tr>
 					<th colspan="2">Hospitalización</th>
@@ -326,9 +333,192 @@
 					<td colspan="2">*** SUB-TOTAL ***</td>
 					<td style="width:20%;text-align:right;">13.528,83</td>
 				</tr>
+				<tr>
+					<th colspan="2">*** TOTAL PROTOCOLO ***</th>
+					<th style="width:20%;text-align:right;">37.252,07</th>
+				</tr>
+			</tbody>
+			</table>
+					</td>
+				</tr>					
+				<tr>
+					<td>002</td>
+					<td>Amigdalitis Crónica</td>
+					<td>Amigdalectomía o Tonsilectomía<br>
+					<table id="invisibleTable">
+			<tbody>
+				<tr>
+					<th colspan="2">Hospitalización</th>
+					<th style="width:20%;text-align:right;">Precio Bs.F.</th>
+				</tr>				
+				<tr>
+					<td style="width:50%">Habitación</td>
+					<td style="width:30%">Ambulatorio</td>
+					<td style="width:20%;text-align:right;">1.135,20</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Médico Residente</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">220,00</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Servicios de Asistencia Permanente</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">154,69</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Servicios de Alimentación</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">260,00</td>
+				</tr>								
+				<tr>
+					<td style="width:50%">Servicios Farmacéuticos Ambulatorios</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">35,20</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Fármacos en Habitación</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">650,32</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Material Médico Quirúrgico en Habitación</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">587,34</td>
+				</tr>
+				<tr id="totalTr">
+					<td colspan="2">*** SUB-TOTAL ***</td>
+					<td style="width:20%;text-align:right;">3.042,75</td>
+				</tr>
+				<tr>
+					<th colspan="2">Gastos en Quirófano</th>
+					<th style="width:20%;text-align:right;">Precio Bs.F.</th>
+				</tr>				
+				<tr>
+					<td style="width:50%">Quirófano</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">4.875,00</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Sala de Recuperación</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">450,00</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Monitoreo</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">1.950,00</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Gases, Anestésicos y Medicamentos</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">4.593,91</td>
+				</tr>								
+				<tr>
+					<td style="width:50%">Material Médico Quirúrgico</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">5852,03</td>
+				</tr>
+				<tr id="totalTr">
+					<td colspan="2">*** SUB-TOTAL ***</td>
+					<td style="width:20%;text-align:right;">17.720,34</td>
+				</tr>
+				<tr>
+					<th colspan="2">Servicios Médicos</th>
+					<th style="width:20%;text-align:right;">Precio Bs.F.</th>
+				</tr>				
+				<tr>
+					<td style="width:50%">Banco de Sangre (Tipiaje)</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">591,25</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Electrocardiograma Reposo</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">402,50</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Evaluación Cardiovascular Pre-Operatoria</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">812,50</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Laboratorio Clínico</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">552,00</td>
+				</tr>								
+				<tr>
+					<td style="width:50%">Rayos X</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">601,90</td>
+				</tr>
+				<tr id="totalTr">
+					<td colspan="2">*** SUB-TOTAL ***</td>
+					<td style="width:20%;text-align:right;">2.960,15</td>
+				</tr>
+				<tr>
+					<th colspan="2">Honorarios Profesionales</th>
+					<th style="width:20%;text-align:right;">Precio Bs.F.</th>
+				</tr>				
+				<tr>
+					<td style="width:50%">Cirujano Principal</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">3.300,00</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Cirujano Ayudante I</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">1.320,00</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Anestesiólogo</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">1.320,00</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Instrumentista</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">224,20</td>
+				</tr>								
+				<tr>
+					<td style="width:50%">Enfermera Circulante</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">56,63</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Instrumental Especial</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">2.000,00</td>
+				</tr>				
+				<tr>
+					<td style="width:50%">Equipo Endoscopio</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">2.500,00</td>
+				</tr>								
+				<tr>
+					<td style="width:50%">Material Especial</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">2.500,00</td>
+				</tr>								
+				<tr>
+					<td style="width:50%">Consulta Pre-Anestésica</td>
+					<td style="width:30%"></td>
+					<td style="width:20%;text-align:right;">308,00</td>
+				</tr>
+				<tr id="totalTr">
+					<td colspan="2">*** SUB-TOTAL ***</td>
+					<td style="width:20%;text-align:right;">13.528,83</td>
+				</tr>
+				<tr>
+					<th colspan="2">*** TOTAL PROTOCOLO ***</th>
+					<th style="width:20%;text-align:right;">37.252,07</th>
+				</tr>
+			</tbody>
+			</table></td>
+				</tr>
 				<tr id="totalTr2">
-					<td colspan="2">*** TOTAL ***</td>
-					<td style="width:20%;text-align:right;">37.252,07</td>
+					<td colspan="2">*** SUB-TOTAL GENERAL ***</td>
+					<td style="width:20%;text-align:right;">74.504,14</td>
 				</tr>
 				<tr id="totalTr">
 					<td colspan="2">I.V.A.</td>
@@ -336,31 +526,31 @@
 				</tr>
 				<tr id="totalTr2">
 					<td colspan="2">*** TOTAL GENERAL ***</td>
-					<td style="width:20%;text-align:right;">37.252,07</td>
+					<td style="width:20%;text-align:right;">74.504,14</td>
 				</tr>
 			</tbody>
-			</table>
-		<br>
+		</table>		
+		<br>		
 		<br>		
 		<br>
 		<div style="text-align:center;font-weight:bold;font-size:11px;">CENTRO MÉDICO QUIRÚRGICO VIDAMED		
 		<br>Departamento Administrativo</div>		
 		<br>
 		<div style="text-align:left;font-size:10px;">Elaborado Por: Elizabeth Hernandez</div>
-		<div style="text-align:left;font-size:10px;">Modificado Por: Elizabeth Hernandez</div>		
+		<div style="text-align:left;font-size:10px;">Modificado Por: Elizabeth Hernandez</div>
 		<br>	
 		<div id="botonera">
-			<form onsubmit="printPageContentB();">
-			<div id="botonP">
-						<input type="submit"  class="button"  name="sbmtButton" value="Imprimir" style="margin-left:30%;" onclick="printPageContentB();unPrintPageContentB();return false" />
-			</div>	
-			</form>
-			<form>
-				<div id="botonV" style="position:relative; margin-left: 450px; top: -20px;">
-						<input type="button" class="button" value="Regresar"  onClick="javascript:history.back();" style="margin-left:40%;" />		
+				<form onsubmit="printPageContentB();">
+				<div id="botonP">
+							<input type="submit"  class="button"  name="sbmtButton" value="Imprimir" style="margin-left:30%;" onclick="printPageContentB();unPrintPageContentB();return false" />
 				</div>	
-			</form>
-		</div>
+				</form>
+				<form>
+					<div id="botonV" style="position:relative; margin-left: 450px; top: -20px;">
+							<input type="button" class="button" value="Regresar"  onClick="javascript:history.back();" style="margin-left:40%;" />		
+					</div>	
+				</form>
+			</div>
 		<div class="push"></div>
         </div>
         <div class="footer" id="footer">
@@ -371,6 +561,6 @@
   			<li>LOS PACIENTES QUE NO TENGAN PÓLIZA DE SEGUROS, PUEDEN CANCELAR EN EFECTIVO, TARJETAS DE CRÉDITO, DÉBITO O CHEQUE DE GERENCIA. EN CASO DE POSEER CHEQUE DE COMPAÑÍA, DEBE TRAERLO A LA INSTITUCIÓN OCHO (8) DÍAS ANTES DE LA INTERVENCIÓN PARA HACER LA RESPECTIVA VERIFICACIÓN.</li>
   			<li>LOS PACIENTES QUE POSEEN PÓLIZA DE SEGUROS DEBEN CANCELAR AL MOMENTO DEL INGRESO LA DIFERENCIA QUE EXISTA ENTRE LA CARTA AVAL Y EL PRESUPUESTO.</li>
 		</ul>		
-		</div>		
+		</div>			
 	</body>
 </html>
