--- a/WebContent/emergencies.html
+++ b/WebContent/emergencies.html
@@ -235,7 +235,14 @@
 			<div id="signup-ct">
 				<h3 id="see_id" class="sprited" > Hospitalizar</h3>
 				<br><br>
-				<span>¿Está seguro que desea hospitalizar a <span class="cliente"></span>? </span> <br><br>
+				<span>¿Qué acción desea realizar sobre los gastos del paciente <span class="cliente"></span>? </span> <br><br>
+				<form id="gastos" style="text-align: center">
+					<select>
+						<option value="-">Seleccionar</option>
+						<option value="F">Generar una factura</option>
+						<option value="T">Trasladar los gastos actuales</option>
+					</select>
+				</form>
 				<div id="signup-header">
 					<a class="close_x" id="close_x"  href="#"></a>
 				</div>
