seccion responsables de pago

--- a/WebContent/searchInsurance.html
+++ b/WebContent/searchInsurance.html
@@ -115,7 +115,7 @@
 					<li><a href="services.html">Servicios</a></li>
 					<li><a id="supplyAreas" href="supplyAreas.html">Suministros</a></li>
 					<li><a href="departments.html">Unidades</a></li>
-					<li><a href="doctors.html">Especialistas</a></li>
+					<li><a href="doctors.html">Especialistas</a></li><li><a href="paymentResponsibles.html">Responsables de Pago</a></li>
 					<li><a href="bank.html">Cajas</a></li>
 					<li><a href="bankAccounts.html">Bancos</a></li>
 					<li><a id="accounts" href="accounts.html">Cuentas</a></li>
