--- a/WebContent/createSupplier.html
+++ b/WebContent/createSupplier.html
@@ -98,7 +98,7 @@
 						<li><a href="services.html">Servicios</a></li>
 						<li><a href="supplyAreas.html">Suministros</a></li>
 						<li><a href="departments.html">Unidades</a></li>
-						<li><a href="doctors.html">Especialistas</a></li>
+						<li><a href="doctors.html">Especialistas</a></li><li><a href="paymentResponsibles.html">Responsables de Pago</a></li>
 						<li><a href="bank.html">Cajas y Bancos</a></li>
 						<li><a class="active" href="accounts.html">Cuentas</a></li>
 					</ul>
