--- a/WebContent/paymentResponsibles.html
+++ b/WebContent/paymentResponsibles.html
@@ -1,9 +1,9 @@
-<!DOCTYPE >
+<!DOCTYPE html >
 <html>
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-	<title>Unidades</title>
+	<title>Responsables de Pago</title>
 	<script type="text/javascript" src="./js/jquery.js"></script>
 	<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
 	<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
@@ -15,6 +15,8 @@
 			"sScrollY": "250px",
 			"bPaginate": false,
 			"aoColumns": [
+				null,
+				null,
 				null,
 				null,
 				{ "bSearchable": false, "asSorting": false, "sWidth": "18%" }
@@ -58,10 +60,10 @@
         </div>         
         <div id="menu">
 			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
-			<ul>
-            	<li class="menuitem"><a href="createDepartment.html">Crear Unidad</a></li>
+	    	<ul>
+            	<li class="menuitem"><a href="createPaymentResponsible.html">Crear Responsable</a></li>
             </ul>
-	    	<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
+			<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         </div>        
 		<div id="leftmenu">
 			<div id="leftmenu_top"></div>
@@ -74,17 +76,18 @@
 					<li><a href="protocols.html">Protocolos</a></li>
 					<li><a href="services.html">Servicios</a></li>
 					<li><a href="supplyAreas.html">Suministros</a></li>
-					<li><a class="active" href="departments.html">Unidades</a></li>
-					<li><a href="doctors.html">Especialistas</a></li><li><a href="paymentResponsibles.html">Responsables de Pago</a></li>
+					<li><a href="departments.html">Unidades</a></li>
+					<li><a href="doctors.html">Especialistas</a></li>
+					<li><a class="active" href="paymentResponsibles.html">Responsables de Pago</a></li>
 					<li><a href="bank.html">Cajas</a></li>
 					<li><a href="bankAccounts.html">Bancos</a></li>
-					<li><a href="accounts.html">Cuentas</a></li> 
+					<li><a href="accounts.html">Cuentas</a></li>
 				</ul>
 			</div>
             <div id="leftmenu_bottom"></div>
         </div>  
 		<div id="content">  
-			<h2>Unidades:</h2>
+			<h2>Responsables de Pago:</h2>
 			<div id="dt_example">
 					<div id="container">
 						<div id="demo">
@@ -92,20 +95,24 @@
 								<thead>
 									<tr>
 										<th>ID</th>
-										<th>Nombre</th>
+										<th>Responsable de Pago</th>
+										<th>Modelo de Negocio</th>
+										<th>Porcentaje</th>
 										<th>Acciones</th>
 									</tr>
 								</thead>
 								<tbody>			
 									<tr class="gradeA">
 										<td>1001</td>
-										<td>Cirugía General</td>
+										<td>MAPFRE La Seguridad</td>
+										<td>Baremo</td>
+										<td>-</td>
 										<td>
-											<a href="editDepartment.html" style="color: transparent" >
+											<a href="editEstimation.html" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1001,'Cirugía General');" >
+												onclick="return loadVars(1001,'1001');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
 											<br>
@@ -113,13 +120,15 @@
 									</tr>
 									<tr class="gradeA">
 										<td>1002</td>
-										<td>Alergología</td>
+										<td>Mercantil Seguros</td>
+										<td>Baremo - Descuento</td>
+										<td>15</td>
 										<td>
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1002,'Alergología');" >
+												onclick="return loadVars(1002,'1002');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
 											<br>
@@ -127,13 +136,15 @@
 									</tr>
 									<tr class="gradeA">
 										<td>1003</td>
-										<td>Bioanálisis</td>
+										<td>Banesco Seguros</td>
+										<td>Baremo + Aumento</td>
+										<td>10</td>
 										<td>
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1003,'Bioanálisis');" >
+												onclick="return loadVars(1003,'1003');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
 											<br>
@@ -145,17 +156,61 @@
 					</div>
 				</div>
 				<div class="spacer"></div>
+        	</div>
        	</div>
-		</div>
-		<div id="deleteUser">
+		<div id="printUser">
 			<div id="signup-ct">
-				<h3 id="see_id" class="sprited" > Eliminar Unidad</h3>
+				<h3 id="see_id" class="sprited" > Imprimir Presupuesto</h3>
 				<br><br>
-				<span>¿Está seguro que desea eliminar la unidad '<span class="cliente"></span>' y su información asociada? </span> <br><br>
+				<span>Seleccione en qué formato desea imprimir el presupuesto n° <span class="cliente"></span>: </span> <br><br>
 				<div id="signup-header">
 					<a class="close_x" id="close_x"  href="#"></a>
 				</div>
-				<form action="departments.html" method="post"  onsubmit="return setV(this)">
+				<form action="printEstimation3.html" method="post"  onsubmit="return setV(this)">
+					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
+					<div class="btn-fld">
+						<input type="submit"  class="buttonPopUpDelete2"  name="sbmtButton" value="Compacto"  />
+					</div>
+		 		</form>
+				<form action="printEstimation.html" method="post"  onsubmit="return setV(this)">
+					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
+					<div class="btn-fld">
+						<input type="submit"  class="buttonPopUpDelete3"  name="sbmtButton" value="Detallado"  />
+					</div>
+		 		</form>
+				<form action="printEstimation2.html" method="post"  onsubmit="return setV(this)">
+					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
+					<div class="btn-fld">
+						<input type="submit"  class="buttonPopUpDelete4"  name="sbmtButton" value="Detallado 2"  />
+					</div>
+		 		</form>
+			</div>
+		</div>
+		<div id="deleteUser">
+			<div id="signup-ct">
+				<h3 id="see_id" class="sprited" > Eliminar Presupuesto</h3>
+				<br><br>
+				<span>¿Está seguro que desea eliminar el presupuesto n° <span class="cliente"></span>? </span> <br><br>
+				<div id="signup-header">
+					<a class="close_x" id="close_x"  href="#"></a>
+				</div>
+				<form action="estimations.html" method="post"  onsubmit="return setV(this)">
+					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
+					<div class="btn-fld">
+						<input type="submit"  class="buttonPopUpDelete"  name="sbmtButton" value="Aceptar"  />
+					</div>
+		 		</form>
+			</div>
+		</div>
+		<div id="refreshUser">
+			<div id="signup-ct">
+				<h3 id="see_id" class="sprited" > Actualizar Presupuesto</h3>
+				<br><br>
+				<span>¿Desea actualizar fecha y costos del presupuesto seleccionado? </span> <br><br>
+				<div id="signup-header">
+					<a class="close_x" id="close_x"  href="#"></a>
+				</div>
+				<form action="estimations.html" method="post"  onsubmit="return setV(this)">
 					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
 					<div class="btn-fld">
 						<input type="submit"  class="buttonPopUpDelete"  name="sbmtButton" value="Aceptar"  />
