responsable de pago y usuario

--- a/WebContent/accounts.html
+++ b/WebContent/accounts.html
@@ -106,7 +106,7 @@
 					    <li><a href="estimations.html">Presupuestos</a></li>
 					    <li><a href="emergencies.html">Emergencia</a></li>
 						<li><a href="admission.html">Admisión</a></li>
-					    <li><a href="hospitalization.html">Hospitalización</a></li>
+					    <li><a href="hospitalization.html">Hospitalización</a></li><li><a href="users.html">Usuarios</a></li>
 						<li><a href="protocols.html">Protocolos</a></li>
 						<li><a href="services.html">Servicios</a></li>
 						<li><a href="supplyAreas.html">Suministros</a></li>
