--- a/WebContent/createAccountMovement.html
+++ b/WebContent/createAccountMovement.html
@@ -47,11 +47,13 @@
 					    <li><a href="emergencies.html">Emergencia</a></li>
 						<li><a href="admission.html">Admisión</a></li>
 					    <li><a href="hospitalization.html">Hospitalización</a></li>
+					    <li><a href="users.html">Usuarios</a></li>
 						<li><a href="protocols.html">Protocolos</a></li>
 						<li><a href="services.html">Servicios</a></li>
 						<li><a href="supplyAreas.html">Suministros</a></li>
 						<li><a href="departments.html">Unidades</a></li>
-						<li><a href="doctors.html">Especialistas</a></li><li><a href="paymentResponsibles.html">Responsables de Pago</a></li>
+						<li><a href="doctors.html">Especialistas</a></li>
+						<li><a href="paymentResponsibles.html">Responsables de Pago</a></li>
 						<li><a href="bank.html">Cajas</a></li>
 						<li><a class="active" href="bankAccounts.html">Bancos</a></li>
 						<li><a href="accounts.html">Cuentas</a></li>
