--- a/WebContent/createUser.html
+++ b/WebContent/createUser.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-		<title>Editar Especialista</title>
+		<title>Crear Usuario</title>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
 		<link href="./css/multi-select.css" media="screen" rel="stylesheet" type="text/css">
 	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
@@ -115,8 +115,7 @@
         	<div id="menu">
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
-	            	<li class="menuitem"><a href="doctors.html">Ver Especialistas</a></li>
-            	<li class="menuitem"><a href="createDoctor.html" style="margin-left:10px;">Crear Especialista</a></li>
+	            	<li class="menuitem"><a href="users.html">Ver Usuarios</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
@@ -128,12 +127,12 @@
 					    <li><a href="emergencies.html">Emergencia</a></li>
 						<li><a href="admission.html">Admisión</a></li>
 					    <li><a href="hospitalization.html">Hospitalización</a></li>
-					    <li><a href="users.html">Usuarios</a></li>
+					    <li><a class="active" href="users.html">Usuarios</a></li>
 						<li><a href="protocols.html">Protocolos</a></li>
 						<li><a href="services.html">Servicios</a></li>
 						<li><a href="supplyAreas.html">Suministros</a></li>
 						<li><a href="departments.html">Unidades</a></li>
-						<li><a class="active" href="doctors.html">Especialistas</a></li>
+						<li><a href="doctors.html">Especialistas</a></li>
 						<li><a href="paymentResponsibles.html">Responsables de Pago</a></li>
 						<li><a href="bank.html">Cajas</a></li>
 						<li><a href="bankAccounts.html">Bancos</a></li>
@@ -143,39 +142,40 @@
 	            <div id="leftmenu_bottom"></div>
 	        </div>
         	<div id="content" style="position:absolute;">	
-	        	<h2>Editar Especialista:</h2>
+	        	<h2>Crear Usuario:</h2>
 				<br>
 				<div id="tabs">
 					<ul>
 					    <li><a href="#tabs-1">Datos Personales</a></li>
 					    <li><a href="#tabs-2">Datos Contacto</a></li>
-					    <li><a href="#tabs-3">Unidad</a></li>
+					    <li><a href="#tabs-3">Datos Usuario</a></li>
+					    <li><a href="#tabs-4">Permisología</a></li>
 			  		</ul>
 			  		<div id="tabs-1">
 						<fieldset>
 							<label for="name">Cédula de Identidad:</label>
 							<select name="txtCedId" id="txtCedId">
-								<option value="V-" selected>V</option>
+								<option value="V-">V</option>
 								<option value="E-">E</option>
 							</select>
-							<input type="text" name="txtCedIdNum" id="txtCedIdNum" maxlength="50" size="18" value="12345678" /> <br><br>
+							<input type="text" name="txtCedIdNum" id="txtCedIdNum" maxlength="50" size="18" /> <br><br>
 							<label for="name">Nombre:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Ricardo"/> <br><br>
+							<input type="text" name="txtFirstName" id="txtFirstName" maxlength="50" size="5"/> <br><br>
 							<label for="name">Apellido:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="López"/> <br><br>
+							<input type="text" name="txtLastName" id="txtLastName" maxlength="50" size="5"/> <br><br>
 							<label for="name">Fecha de Nacimiento:</label>
-							<input type="text" name="txtDateIni" id="txtDateIni" maxlength="50" size="10" value="07/09/1965"/> <br><br>
+							<input type="text" name="txtDateIni" id="txtDateIni" maxlength="50" size="10" /><br><br>
 							<label for="name">Sexo:</label>
 							<select name="txtGen" id="txtGen">	
 								<option value="-" selected="selected">Seleccionar</option>
 								<option value="F">Femenino</option>
-								<option value="M" selected>Masculino</option>
+								<option value="M" >Masculino</option>
 							</select><br><br>
 						</fieldset>						
 						<div id="botonera">
-							<form action="doctors.html">
+							<form action="users.html">
 								<div id="botonP" style="display: inline; margin-right: 30px;">
-											<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
+											<input type="submit"  class="button"  name="sbmtButton" value="Agregar" />
 								</div>	
 								<div id="botonV" style="display: inline;">
 										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
@@ -186,37 +186,37 @@
 			  		<div id="tabs-2">
 						<fieldset>
 							<label for="name">Dirección:</label>
-							<textarea name="txtDescription" id="txtDescription" rows="2" cols="50">Av. Francisco de Miranda, Edif. Miravila, piso 18, apto 183. La California.</textarea> <br><br>
+							<textarea name="txtDescription" id="txtDescription" rows="2" cols="50"></textarea> <br><br>
 							<label for="name">Correo Electrónico:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="rlopez@gmail.com"/> <br><br>
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
 							<label for="name">Teléfono:</label>
 							<div >
 								<select id="phone" name="phone">
-									<option value="L" selected>Local</option>
+									<option value="L" >Local</option>
 									<option value="P" >Particular</option>
 									<option value="T" >Trabajo</option>
 								</select>
-						  	 	<input type="text" value="02122345678" style="width: 135px;">
+						  	 	<input type="text" value="" style="width: 135px;">
 						  	 	<img alt="logo" src="./images/add.png"  id="addPhone" height="16" width="16" style="margin-left:10px; cursor: pointer;" title="Agregar otro telefono" />
 								<br /><br />
 							</div>
-							<div id="otherPhone">
-								<select id="phone" name="phone">
-									<option value="L">Local</option>
-									<option value="P" selected>Particular</option>
-									<option value="T" >Trabajo</option>
-								</select>
-								<input type="text" value="04142345678" style="width: 135px;">
-								<img alt="logo" src="./images/close.png"  id="deletePhone" height="16" width="16" style="margin-left:10px; cursor: pointer;" title="Agregar otro telefono" />
-						 		<br /><br />
-						 	</div>
-							<div id="otherPhone2">
+							<div id="otherPhone" style="display:none;">
 								<select id="phone" name="phone">
 									<option value="L" >Local</option>
 									<option value="P" >Particular</option>
-									<option value="T"  selected>Trabajo</option>
+									<option value="T" >Trabajo</option>
 								</select>
-								<input type="text" value="02129876543" style="width: 135px;">
+								<input type="text" value="" style="width: 135px;">
+								<img alt="logo" src="./images/close.png"  id="deletePhone" height="16" width="16" style="margin-left:10px; cursor: pointer;" title="Agregar otro telefono" />
+						 		<br /><br />
+						 	</div>
+							<div id="otherPhone2" style="display:none;">
+								<select id="phone" name="phone">
+									<option value="L" >Local</option>
+									<option value="P" >Particular</option>
+									<option value="T" >Trabajo</option>
+								</select>
+								<input type="text" value="" style="width: 135px;">
 								<img alt="logo" src="./images/close.png"  id="deletePhone2" height="16" width="16" style="margin-left:10px; cursor: pointer;" title="Agregar otro telefono" />
 						  	 	<br /><br />
 						  	 </div>
@@ -232,9 +232,9 @@
 						  	 </div>
 						</fieldset>		
 						<div id="botonera">
-							<form action="doctors.html">
+							<form action="users.html">
 								<div id="botonP" style="display: inline; margin-right: 30px;">
-											<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
+											<input type="submit"  class="button"  name="sbmtButton" value="Agregar" />
 								</div>	
 								<div id="botonV" style="display: inline;">
 										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
@@ -245,80 +245,53 @@
 			  		<div id="tabs-3">
 			  			<fieldset>
 							<label for="name">Unidad:</label>
-							<div style="float:left;">
-							<select multiple="multiple" id="my-select" name="my-select[]">
-								<option value="337" >ALERGOLOGÍA</option>
-							 	<option value="660" >ANALISTAS DE SEGUROS</option>
-								<option value="338" >ANESTESIOLOGÍA</option>
-								<option value="340" >BIOANÁLISIS</option>
-								<option value="240" >CARDIOLOGÍA</option>
-								<option value="342" >CARDIOVASCULAR PERIFÉRICO</option>
-								<option value="343" >CIRUGÍA BARIÁTRICA</option>
-								<option value="344" >CIRUGÍA COLUMNA</option>
-								<option value="345" >CIRUGÍA DE TÓRAX</option>
-								<option value="887" >CIRUGIA EN ORTOPEDIA INFANTIL</option>
-								<option value="235" selected>CIRUGIA GENERAL</option>
-								<option value="346" >CIRUGÍA GINECOLÓGICA</option>
-								<option value="544" >CIRUGÍA LAPAROSCOPICA</option>
-								<option value="348" >CIRUGÍA MÁXILO-FACIAL </option>
-								<option value="349" >CIRUGÍA ONCOLÓGICA </option>
-								<option value="350" >CIRUGÍA PEDIÁTRICA</option>
-								<option value="351" >CIRUGÍA PLÁSTICA, ESTÉTICA Y RECONSTRUCTIVA</option>
-								<option value="935" >COLOPROCTOLOGÍA</option>
-								<option value="658" >COORDINADOR DE APS / SUP. DE SECRETARIAS</option>
-								<option value="236" >DERMATOLOGÍA</option>
-								<option value="352" >ENDOCRINOLOGÍA</option>
-								<option value="231" >FISIATRÍA</option>
-								<option value="353" >FISIOTERAPEUTAS</option>
-								<option value="238" >GASTROENTEROLOGÍA</option>
-								<option value="418" >GASTROENTEROLOGÍA INFANTIL</option>
-								<option value="355" >GINECO OBSTETRICIA</option>
-								<option value="356" selected>GINECOLOGÍA CLÍNICA</option>
-								<option value="239" >HEMATOLOGÍA</option>
-								<option value="357" >INFERTILIDAD</option>
-								<option value="419" >LABORATORIO</option>
-								<option value="359" >MASTOLOGÍA</option>
-								<option value="245" >MEDICINA INTERNA</option>
-								<option value="362" >MÉDICOS RESIDENTES</option>
-								<option value="656" >NEFROLOGIA DE ADULTOS</option>
-								<option value="364" >NEONATOLOGÍA</option>
-								<option value="365" >NEUMONOLOGÍA</option>
-								<option value="366" >NEUMONOLOGÍA PEDÍATRICA</option>
-								<option value="367" >NEUROCIRUGÍA</option>
-								<option value="233" >NEUROLOGÍA</option>
-								<option value="229" >NUTRICIÓN</option>
-								<option value="232" >OFTALMOLOGÍA</option>
-								<option value="370" selected>ONCOLOGÍA MÉDICA</option>
-								<option value="244" >OTORRINOLARINGOLOGÍA</option>
-								<option value="371" >PATOLOGÍA</option>
-								<option value="372" >PEDIATRÍA</option>
-								<option value="373" >PROCTOLOGÍA</option>
-								<option value="374" >PSQUIATRÍA</option>
-								<option value="375" >RADIOLOGÍA, IMAGENOLOGÍA</option>
-								<option value="376" >REUMATOLOGÍA</option>
-								<option value="659" >SECRETARIAS</option>
-								<option value="378" >TÉCNICOS RADIÓLOGOS</option>
-								<option value="379" >TOMOGRAFÍA Y RESONANCIA</option>
-								<option value="657" >TRAUMATOLOGIA ESPECIALISTA EN COLUMNA</option>
-								<option value="380" >TRAUMATOLOGÍA Y ORTOPEDIA</option>
-								<option value="242" >UROLOGÍA</option>
-								<option value="381" >UROLOGÍA PEDIÁTRICA</option>
-						    </select>	
-							<!--JS Multiselect http://loudev.com/-->
-						    <script src="./js/jquery.multi-select.js" type="text/javascript"></script>		
-						    </div>		
+							<select name="txtGen" id="txtGen">	
+								<option value="-" selected="selected">Seleccionar</option>
+								<option value="M" >Admisión</option>
+								<option value="M" >Caja</option>
+								<option value="M" >Emergencia</option>
+								<option value="F">Facturación</option>
+								<option value="M" >Farmacia</option>
+								<option value="M" >Sistema</option>
+							</select><br><br>
+							<label for="name">Fecha de Ingreso:</label>
+							<input type="text" name="txtDateIni2" id="txtDateIni2" maxlength="50" size="10" /><br><br>
+							<label for="name">Cargo:</label>
+							<input type="text" name="txtFirstName" id="txtFirstName" maxlength="50" size="5"/> <br><br>
+							<label for="name">Salario:</label>
+							<input type="number" min="1" name="txtPrice" id="txtPrice" maxlength="6" size="6" /> <br><br>
+							<label for="name">Usuario:</label>
+							<input type="text" name="txtFirstName" id="txtFirstName" maxlength="50" size="5"/> <br><br>
+							<label for="name">Contraseña:</label>
+							<input type="password" name="txtFirstName" id="txtFirstName" maxlength="50"/> <br><br>
+							<label for="name">Repetir Contraseña:</label>
+							<input type="password" name="txtFirstName" id="txtFirstName" maxlength="50"/> <br><br>
 						</fieldset>		
 						<div id="botonera">
-							<form action="doctors.html">
+							<form action="users.html">
 								<div id="botonP" style="display: inline; margin-right: 30px;">
-											<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
+											<input type="submit"  class="button"  name="sbmtButton" value="Agregar" />
 								</div>	
 								<div id="botonV" style="display: inline;">
 										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
 								</div>	
 							</form>
 						</div><br>
-			  		</div>
+			  		</div>			  		
+			  		<div id="tabs-4">
+			  			<fieldset>
+			  			</fieldset>
+			  			<div id="botonera">
+							<form action="users.html">
+								<div id="botonP" style="display: inline; margin-right: 30px;">
+											<input type="submit"  class="button"  name="sbmtButton" value="Agregar" />
+								</div>	
+								<div id="botonV" style="display: inline;">
+										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+								</div>	
+							</form>
+						</div><br>
+			  		</div>	
 			  	</div>
 			</div>
 		</div>
