--- a/WebContent/editPaymentResponsible.html
+++ b/WebContent/editPaymentResponsible.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-		<title>Crear Responsable de Pago</title>
+		<title>Editar Responsable de Pago</title>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
 	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
@@ -56,6 +56,7 @@
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
 	            	<li class="menuitem"><a href="paymentResponsibles.html">Ver Responsables</a></li>
+            		<li class="menuitem"><a href="createPaymentResponsible.html">Crear Responsable</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
@@ -82,22 +83,22 @@
 	            <div id="leftmenu_bottom"></div>
 	        </div>
         	<div id="content" style="position:absolute;">	
-	        	<h2>Crear Responsable de Pago:</h2>
+	        	<h2>Editar Responsable de Pago:</h2>
 				<br>
 				<fieldset>
 					<label for="name">Nombre:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+					<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="MAPFRE La Seguridad"/> <br><br>
 					<label for="name">Regla de Negocio:</label>
 					<select name="selBusinessRule" id="selBusinessRule" onchange="displayDiv(this);">
-						<option value="0" selected>Seleccione...</option>
-						<option value="1">General</option>
+						<option value="0">Seleccione...</option>
+						<option value="1" selected>General</option>
 						<option value="2">Específica (Por Micros)</option>
 					</select> <br><br>
-					<div id="genModel" style="display:none;">
+					<div id="genModel" style="display:block;">
 						<label for="name">Modelo de Negocio:</label>
 						<select name="selBusinessModel" id="selBusinessModel" onchange="displaySubDiv(this, 1);">
-							<option value="0" selected>Seleccione...</option>
-							<option value="1">Baremo</option>
+							<option value="0">Seleccione...</option>
+							<option value="1" selected>Baremo</option>
 							<option value="2">Baremo - Descuento</option>
 							<option value="3">Baremo + Aumento</option>
 						</select> <br><br>
@@ -179,7 +180,7 @@
 				<div id="botonera">
 					<form action="paymentResponsibles.html">
 						<div id="botonP" style="display: inline; margin-right: 30px;">
-									<input type="submit"  class="button"  name="sbmtButton" value="Agregar" />
+									<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
 						</div>	
 						<div id="botonV" style="display: inline;">
 								<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
