--- a/WebContent/paymentResponsibles.html
+++ b/WebContent/paymentResponsibles.html
@@ -73,6 +73,7 @@
 				    <li><a href="emergencies.html">Emergencia</a></li>
 					<li><a href="admission.html">Admisión</a></li>
 				    <li><a href="hospitalization.html">Hospitalización</a></li>
+				    <li><a href="users.html">Usuarios</a></li>
 					<li><a href="protocols.html">Protocolos</a></li>
 					<li><a href="services.html">Servicios</a></li>
 					<li><a href="supplyAreas.html">Suministros</a></li>
@@ -96,8 +97,8 @@
 									<tr>
 										<th>ID</th>
 										<th>Responsable de Pago</th>
+										<th>Regla de Negocio</th>
 										<th>Modelo de Negocio</th>
-										<th>Porcentaje</th>
 										<th>Acciones</th>
 									</tr>
 								</thead>
@@ -105,10 +106,10 @@
 									<tr class="gradeA">
 										<td>1001</td>
 										<td>MAPFRE La Seguridad</td>
+										<td>General</td>
 										<td>Baremo</td>
-										<td>-</td>
 										<td>
-											<a href="editEstimation.html" style="color: transparent" >
+											<a href="editPaymentResponsible.html" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
@@ -121,8 +122,8 @@
 									<tr class="gradeA">
 										<td>1002</td>
 										<td>Mercantil Seguros</td>
-										<td>Baremo - Descuento</td>
-										<td>15</td>
+										<td>Específica (Por Micros)</td>
+										<td>*</td>
 										<td>
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
@@ -137,8 +138,8 @@
 									<tr class="gradeA">
 										<td>1003</td>
 										<td>Banesco Seguros</td>
+										<td>General</td>
 										<td>Baremo + Aumento</td>
-										<td>10</td>
 										<td>
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
@@ -158,59 +159,15 @@
 				<div class="spacer"></div>
         	</div>
        	</div>
-		<div id="printUser">
-			<div id="signup-ct">
-				<h3 id="see_id" class="sprited" > Imprimir Presupuesto</h3>
-				<br><br>
-				<span>Seleccione en qué formato desea imprimir el presupuesto n° <span class="cliente"></span>: </span> <br><br>
-				<div id="signup-header">
-					<a class="close_x" id="close_x"  href="#"></a>
-				</div>
-				<form action="printEstimation3.html" method="post"  onsubmit="return setV(this)">
-					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
-					<div class="btn-fld">
-						<input type="submit"  class="buttonPopUpDelete2"  name="sbmtButton" value="Compacto"  />
-					</div>
-		 		</form>
-				<form action="printEstimation.html" method="post"  onsubmit="return setV(this)">
-					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
-					<div class="btn-fld">
-						<input type="submit"  class="buttonPopUpDelete3"  name="sbmtButton" value="Detallado"  />
-					</div>
-		 		</form>
-				<form action="printEstimation2.html" method="post"  onsubmit="return setV(this)">
-					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
-					<div class="btn-fld">
-						<input type="submit"  class="buttonPopUpDelete4"  name="sbmtButton" value="Detallado 2"  />
-					</div>
-		 		</form>
-			</div>
-		</div>
 		<div id="deleteUser">
 			<div id="signup-ct">
-				<h3 id="see_id" class="sprited" > Eliminar Presupuesto</h3>
+				<h3 id="see_id" class="sprited" > Eliminar Responsable</h3>
 				<br><br>
-				<span>¿Está seguro que desea eliminar el presupuesto n° <span class="cliente"></span>? </span> <br><br>
+				<span>¿Está seguro que desea eliminar el responsable de pago n° <span class="cliente"></span>? </span> <br><br>
 				<div id="signup-header">
 					<a class="close_x" id="close_x"  href="#"></a>
 				</div>
-				<form action="estimations.html" method="post"  onsubmit="return setV(this)">
-					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
-					<div class="btn-fld">
-						<input type="submit"  class="buttonPopUpDelete"  name="sbmtButton" value="Aceptar"  />
-					</div>
-		 		</form>
-			</div>
-		</div>
-		<div id="refreshUser">
-			<div id="signup-ct">
-				<h3 id="see_id" class="sprited" > Actualizar Presupuesto</h3>
-				<br><br>
-				<span>¿Desea actualizar fecha y costos del presupuesto seleccionado? </span> <br><br>
-				<div id="signup-header">
-					<a class="close_x" id="close_x"  href="#"></a>
-				</div>
-				<form action="estimations.html" method="post"  onsubmit="return setV(this)">
+				<form action="paymentResponsibles.html" method="post"  onsubmit="return setV(this)">
 					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
 					<div class="btn-fld">
 						<input type="submit"  class="buttonPopUpDelete"  name="sbmtButton" value="Aceptar"  />
